<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:background="@drawable/definition">



    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:background="@color/viewBack">
        <EditText
            android:id="@+id/searchTerm"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:text=""
            android:gravity="start"
            android:hint="@string/search_hint"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="text"
            android:autofillHints="search term"
            android:background="@drawable/rounded_corners"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"

            android:nextFocusForward="@id/searchButton"
            android:imeOptions="actionGo"

            tools:text="rat-licker"/>

        <!-- TODO:// fix: icon does not show on a small screen (3.3 WQVGA) Possible foregroundTint alternative needed. -->
        <Button
            android:id="@+id/searchButton"
            android:background="@drawable/rounded_corners_button"
            android:foreground="@drawable/ic_search_black_24dp"
            android:src="@drawable/ic_search_black_24dp"
            android:foregroundTint="#ddd"
            android:shadowDx="16"
            android:shadowDy="16"
            android:shadowRadius="4"
            android:shadowColor="#11f"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintLeft_toRightOf="@+id/searchTerm"
            app:layout_constraintBottom_toBottomOf="@+id/searchTerm"
            android:focusedByDefault="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/search_layout"
        android:background="@color/viewBack"
        android:gravity="left"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/sort_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            style="@style/Definition" />
        <ImageView
            android:id="@+id/sort_thumbs_up"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_thumb_up_black_24dp" />
        <ImageView
            android:id="@+id/sort_thumbs_down"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_thumb_down_black_24dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sortBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortBar" />


</androidx.constraintlayout.widget.ConstraintLayout>